update swagger ui and add routes
