# server/src/interfaces/game.ts
@@ -1,3 +1,6 @@
+export type Vertex = [ number, number ]
+export type GameBoard = Array<Array<string>>
+
 export interface IGameUserMove {
   color: string
 }
@@ -5,16 +8,22 @@ export interface IGameUserMove {
 export interface IGameMove extends IGameUserMove {
   result: GameBoard
   isGameComplete: boolean
+  // to draw a nice line border on the frontend
+  connectedBeforeApply: Array<Vertex>
 }
 
-export type GameBoard = Array<Array<string>>
 export type GameMoves = Array<IGameMove>
-export type Vertex = [ number, number ]
 
 export interface IGame {
   name?: string
   board: GameBoard
   moves: GameMoves
+}
+
+// to draw a nice line border on the frontend
+export interface IGameResponse extends IGame {
+  gameId: string
+  connectedVertices: Array<Vertex>
 }
 
 export interface IGameCollection {
